--- a/inicio.html
+++ b/inicio.html
@@ -23,13 +23,13 @@
 
             <ul id="menu">
                 <li class="menu-item">
-                    <a class="menu-item-link" href="">CURSOS</a>
+                    <a class="menu-item-link" href="/cursos.html">CURSOS</a>
                 </li>
                 <li class="menu-item">
-                    <a class="menu-item-link" href="">BLOG</a>
+                    <a class="menu-item-link" href="/blog.html">BLOG</a>
                 </li>
                 <li class="menu-item">
-                    <a class="menu-item-link" href="">CONTATO</a>
+                    <a class="menu-item-link" href="/contato.html">CONTATO</a>
                 </li>
             </ul>
         </nav>
@@ -135,7 +135,7 @@
                 <img src="images/risoto.png" alt="risoto" width="319px" height="193px">
                 <h4 class="titulo-central-4">Itaque earum rerum</h4>
                 <p>
-                    
+
                     hic tenetur a sapiente delectus, ut aut <br>
                     reiciendis voluptatibus maiores alias <br>
                     consequatur aut perferendis doloribus <br>
@@ -146,7 +146,7 @@
                 <img src="images/risoto.png" alt="risoto" width="319px" height="193px">
                 <h4 class="titulo-central-4">Itaque earum rerum</h4>
                 <p>
-                    
+
                     hic tenetur a sapiente delectus, ut aut <br>
                     reiciendis voluptatibus maiores alias <br>
                     consequatur aut perferendis doloribus <br>
@@ -164,13 +164,32 @@
                 </p>
             </div>
         </section>
-        <a id="button-inferior" href="">ver todos os posts</a>
+        <div id="button">
+            <a id="button-inferior" href="">ver todos os posts</a>
+        </div>
     </main>
-    <footer id="container-footer">
-        <nav>
-            <img src="images/logo-footer.png" alt="logo-header">
+    <footer>
+        <div id="container-footer">
+            <img id="logo-footer" src="images/logo-footer.png" alt="logo-header">
 
-        </nav>
+            <nav>
+                <ul class="menu-footer">
+                    <li class="menu-footer-item-link">
+                        <a href="" class="menu-footer-item">cursos</a>
+                    </li>
+                    <li class="menu-footer-item-link">
+                        <a href="" class="menu-footer-item">blog</a>
+                    </li>
+                    <li class="menu-footer-item-link">
+                        <a href="" class="menu-footer-item">contato</a>
+                    </li>
+                </ul>
+            </nav>
+            <div id="button-footer">
+                <a id="button-a" href="">quero ser prof</a>
+                <a id="button-b" href="">quero ser rico</a>
+            </div>
+        </div>
     </footer>
 </body>
 
