Correção páginas blog, contato, curso, cursos, início

--- a/inicio.html
+++ b/inicio.html
@@ -18,7 +18,7 @@
 
 <body>
     <header id="container-header">
-        <nav>
+        <nav id="nav-header">
             <img src="images/logo-header.png" alt="logo-header">
 
             <ul id="menu">
@@ -172,16 +172,16 @@
         <div id="container-footer">
             <img id="logo-footer" src="images/logo-footer.png" alt="logo-header">
 
-            <nav>
+            <nav id="nav-footer">
                 <ul class="menu-footer">
                     <li class="menu-footer-item-link">
-                        <a href="" class="menu-footer-item">cursos</a>
+                        <a href="/cursos.html" class="menu-footer-item">cursos</a>
                     </li>
                     <li class="menu-footer-item-link">
-                        <a href="" class="menu-footer-item">blog</a>
+                        <a href="/blog.html" class="menu-footer-item">blog</a>
                     </li>
                     <li class="menu-footer-item-link">
-                        <a href="" class="menu-footer-item">contato</a>
+                        <a href="/contato.html" class="menu-footer-item">contato</a>
                     </li>
                 </ul>
             </nav>
