--- a/post.html
+++ b/post.html
@@ -18,18 +18,18 @@
 
 <body>
     <header id="container-header">
-        <nav>
+        <nav id="nav-header">
             <img src="images/logo-header.png" alt="logo-header">
 
             <ul id="menu">
                 <li class="menu-item">
-                    <a class="menu-item-link" href="/cursos.html" target="_blank">CURSOS</a>
+                    <a class="menu-item-link" href="/cursos.html">CURSOS</a>
                 </li>
                 <li class="menu-item">
-                    <a class="menu-item-link" href="">BLOG</a>
+                    <a class="menu-item-link" href="/blog.html">BLOG</a>
                 </li>
                 <li class="menu-item">
-                    <a class="menu-item-link" href="/contato.html" target="_blank">CONTATO</a>
+                    <a class="menu-item-link" href="/contato.html">CONTATO</a>
                 </li>
             </ul>
         </nav>
@@ -167,11 +167,28 @@
             </div>
         </section>
     </main>
-    <footer id="container-footer">
-        <nav>
-            <img src="images/logo-footer.png" alt="logo-header">
+    <footer>
+        <div id="container-footer">
+            <img id="logo-footer" src="images/logo-footer.png" alt="logo-header">
 
-        </nav>
+            <nav id="nav-footer">
+                <ul class="menu-footer">
+                    <li class="menu-footer-item-link">
+                        <a href="/cursos.html" class="menu-footer-item">cursos</a>
+                    </li>
+                    <li class="menu-footer-item-link">
+                        <a href="/blog.html" class="menu-footer-item">blog</a>
+                    </li>
+                    <li class="menu-footer-item-link">
+                        <a href="/contato.html" class="menu-footer-item">contato</a>
+                    </li>
+                </ul>
+            </nav>
+            <div id="button-footer">
+                <a id="button-a" href="">quero ser prof</a>
+                <a id="button-b" href="">quero ser rico</a>
+            </div>
+        </div>
     </footer>
 </body>
 
