--- a/cursos.html
+++ b/cursos.html
@@ -8,28 +8,22 @@
     <title>cursos</title>
     <link rel="stylesheet" href="styles/cursos.css">
     <link rel="stylesheet" href="styles/header-footer.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;700&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;700&display=swap" rel="stylesheet">
 </head>
 
 <body>
     <header id="container-header">
-        <nav>
+        <nav id="nav-header">
             <img src="images/logo-header.png" alt="logo-header">
 
             <ul id="menu">
                 <li class="menu-item">
-                    <a class="menu-item-link" href="">CURSOS</a>
+                    <a class="menu-item-link" href="/cursos.html">CURSOS</a>
                 </li>
                 <li class="menu-item">
-                    <a class="menu-item-link" href="">BLOG</a>
+                    <a class="menu-item-link" href="/blog.html">BLOG</a>
                 </li>
                 <li class="menu-item">
-                    <a class="menu-item-link" href="">CONTATO</a>
+                    <a class="menu-item-link" href="/contato.html">CONTATO</a>
                 </li>
             </ul>
         </nav>
@@ -83,11 +77,28 @@
             </div>
         </section>
     </main>
-    <footer id="container-footer">
-        <nav>
-            <img src="images/logo-footer.png" alt="logo-header">
+    <footer>
+        <div id="container-footer">
+            <img id="logo-footer" src="images/logo-footer.png" alt="logo-header">
 
-        </nav>
+            <nav id="nav-footer">
+                <ul class="menu-footer">
+                    <li class="menu-footer-item-link">
+                        <a href="/cursos.html" class="menu-footer-item">cursos</a>
+                    </li>
+                    <li class="menu-footer-item-link">
+                        <a href="/blog.html" class="menu-footer-item">blog</a>
+                    </li>
+                    <li class="menu-footer-item-link">
+                        <a href="/contato.html" class="menu-footer-item">contato</a>
+                    </li>
+                </ul>
+            </nav>
+            <div id="button-footer">
+                <a id="button-a" href="">quero ser prof</a>
+                <a id="button-b" href="">quero ser rico</a>
+            </div>
+        </div>
     </footer>
 </body>
 
