--- a/post.html
+++ b/post.html
@@ -36,12 +36,12 @@
     </header>
     <main>
         <div id="container">
-            <div class="card">
+            <div class="card-texto">
                 <h1>On the other hand, we denounce</h1>
                 <p>27 de dezembro de 2020</p>
-                <img src="images/bolo-banana.png" alt="" width="1032" height="465">
             </div>
             <div class="card">
+                <img src="images/bolo-banana.png" alt="" width="1032" height="465">
                 <p>
                     On the other hand, we denounce with righteous indignation and dislike men who are so beguiled and
                     demoralized by the charms <br> of pleasure of the moment, so blinded by desire, that they cannot
@@ -83,7 +83,7 @@
                     <br>
                 </p>
 
-                <p>
+                <p id="titulo-central">
                     These cases are perfectly simple and easy to distinguish
                     <br>
                     <br>
@@ -117,7 +117,7 @@
                     <br>
                 </p>
 
-                <p>
+                <p id="titulo-inferior">
                     Sed ut perspiciatis unde omnis iste natus error sit
                     <br>
                     <br>
@@ -133,13 +133,19 @@
                     veniam, quis nostrum exercitationem <br> ullam corporis suscipit laboriosam, nisi ut aliquid ex ea
                     commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea <br> voluptate velit esse quam nihil
                     molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?
+                    <br>
+                    <br>
+                    <br>
+                    <br>
+                    <br>
+                    <br>
                 </p>
             </div>
         </div>
-        <h1>Conheça nossos cursos</h1>
+       <h1 id="titulo-section">Conheça nossos cursos</h1>
         <section id="section-central-1">
-            <div class="card-3">
-                <img src="images/ilustra-poupando.png" alt="poupando">
+            <div class="card">
+                <img src="images/ilustra-poupando.png" alt="poupando" width="288" height="279">
                 <h1 class="titulos-central-1">Investimento para iniciantes</h1>
                 <p class="paragrafos-central">Duis aute irure dolor in reprehenderit <br>
                     in voluptate velit es se cillum dolore <br>
@@ -147,8 +153,8 @@
                 </p>
                 <a class="link-central" href="">começar agora</a>
             </div>
-            <div class="card-4">
-                <img src="images/ilustra-investimento.png" alt="ilustra">
+            <div class="card">
+                <img src="images/ilustra-investimento.png" alt="ilustra" width="238" height="279">
                 <h1 class="titulos-central-1">Poupando e Rendendo</h1>
                 <p class="paragrafos-central">Duis aute irure dolor in reprehenderit <br>
                     in voluptate velit es se cillum dolore <br>
@@ -156,8 +162,8 @@
                 </p>
                 <a class="link-central" href="">começar agora</a>
             </div>
-            <div class="card-5">
-                <img src="images/ilustra-independencia.png" alt="independencia">
+            <div class="card">
+                <img src="images/ilustra-independencia.png" alt="independencia" width="187" height="279">
                 <h1 class="titulos-central-1">Independência Financeira</h1>
                 <p class="paragrafos-central">Duis aute irure dolor in reprehenderit <br>
                     in voluptate velit es se cillum dolore <br>
