--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>inicio</title>
     <link rel="stylesheet" href="styles/inicio.css">
     <link rel="stylesheet" href="styles/header-footer.css">
-    <link rel="stylesheet" href="https://projetosgeovane.github.io/Dindin/cursos.html" rel="stylesheet" />
+    <link rel="stylesheet" href="https://projetosgeovane.github.io/Dindin/cursos.html" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;700&display=swap" rel="stylesheet">
