--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
             </div>
         </section>
         <div id="button">
-            <a id="button-inferior" href="">ver todos os posts</a>
+            <a id="button-inferior" href="./blog.html">ver todos os posts</a>
         </div>
     </main>
     <footer>
