Alteração nos 'HREF'

--- a/cursos.html
+++ b/cursos.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>cursos</title>
+    <title>Cursos</title>
     <link rel="stylesheet" href="styles/cursos.css">
     <link rel="stylesheet" href="styles/header-footer.css">
 </head>
@@ -17,13 +17,13 @@
 
             <ul id="menu">
                 <li class="menu-item">
-                    <a class="menu-item-link" href="/cursos.html">CURSOS</a>
+                    <a class="menu-item-link" href="./cursos.html">CURSOS</a>
                 </li>
                 <li class="menu-item">
-                    <a class="menu-item-link" href="/blog.html">BLOG</a>
+                    <a class="menu-item-link" href="./blog.html">BLOG</a>
                 </li>
                 <li class="menu-item">
-                    <a class="menu-item-link" href="/contato.html">CONTATO</a>
+                    <a class="menu-item-link" href="./contato.html">CONTATO</a>
                 </li>
             </ul>
         </nav>
@@ -84,13 +84,13 @@
             <nav id="nav-footer">
                 <ul class="menu-footer">
                     <li class="menu-footer-item-link">
-                        <a href="/cursos.html" class="menu-footer-item">cursos</a>
+                        <a href="./cursos.html" class="menu-footer-item">cursos</a>
                     </li>
                     <li class="menu-footer-item-link">
-                        <a href="/blog.html" class="menu-footer-item">blog</a>
+                        <a href="./blog.html" class="menu-footer-item">blog</a>
                     </li>
                     <li class="menu-footer-item-link">
-                        <a href="/contato.html" class="menu-footer-item">contato</a>
+                        <a href="./contato.html" class="menu-footer-item">contato</a>
                     </li>
                 </ul>
             </nav>
