--- a/post.html
+++ b/post.html
@@ -7,12 +7,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/post.css">
     <link rel="stylesheet" href="styles/header-footer.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;700&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;700&display=swap" rel="stylesheet">
     <title>Post</title>
 </head>
 
@@ -23,13 +17,13 @@
 
             <ul id="menu">
                 <li class="menu-item">
-                    <a class="menu-item-link" href="/cursos.html">CURSOS</a>
+                    <a class="menu-item-link" href="./cursos.html">CURSOS</a>
                 </li>
                 <li class="menu-item">
-                    <a class="menu-item-link" href="/blog.html">BLOG</a>
+                    <a class="menu-item-link" href="./blog.html">BLOG</a>
                 </li>
                 <li class="menu-item">
-                    <a class="menu-item-link" href="/contato.html">CONTATO</a>
+                    <a class="menu-item-link" href="./contato.html">CONTATO</a>
                 </li>
             </ul>
         </nav>
@@ -180,13 +174,13 @@
             <nav id="nav-footer">
                 <ul class="menu-footer">
                     <li class="menu-footer-item-link">
-                        <a href="/cursos.html" class="menu-footer-item">cursos</a>
+                        <a href="./cursos.html" class="menu-footer-item">cursos</a>
                     </li>
                     <li class="menu-footer-item-link">
-                        <a href="/blog.html" class="menu-footer-item">blog</a>
+                        <a href="./blog.html" class="menu-footer-item">blog</a>
                     </li>
                     <li class="menu-footer-item-link">
-                        <a href="/contato.html" class="menu-footer-item">contato</a>
+                        <a href="./contato.html" class="menu-footer-item">contato</a>
                     </li>
                 </ul>
             </nav>
