Páginas faltando ajustes na responsividade

--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
             </div>
         </section>
         <div id="button">
-            <a id="button-inferior" href="./blog.html">ver todos os posts</a>
+            <a id="button-inferior" href="./post.html">ver todos os posts</a>
         </div>
     </main>
     <footer>
