--- a/post.html
+++ b/post.html
@@ -32,10 +32,10 @@
         <div id="container">
             <div class="card-texto">
                 <h1>On the other hand, we denounce</h1>
-                <p>27 de dezembro de 2020</p>
+                <p>03 de março de 2022</p>
             </div>
-            <div class="card">
-                <img src="images/bolo-banana.png" alt="" width="1032" height="465">
+            <div class="card-1">
+                <img src="images/futuro.jpg" alt="" width="1032" height="465">
                 <p>
                     On the other hand, we denounce with righteous indignation and dislike men who are so beguiled and
                     demoralized by the charms <br> of pleasure of the moment, so blinded by desire, that they cannot
