Páginas index e form com ajustes na responsividade

--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
     <main>
         <section id="section-superior">
             <div class="card-1">
-                <p id="titulo-superior">Educação <br>
+                <h1 id="titulo-superior">Educação <br>
                     Financeira <br>
-                    é tudo de bom</p>
+                    é tudo de bom</h1>
                 <p id="titulo-superior1">Vem comigo que te mostro <br>
                     por onde começar</p>
                 <a href="">quero saber mais</a>
