--- a/post.html
+++ b/post.html
@@ -12,21 +12,17 @@
 
 <body>
     <header id="container-header">
-        <nav id="nav-header">
-            <img src="images/logo-header.png" alt="logo-header">
+        <div class="wrapper">
+            <a id="logo-header" href="./index.html">
+                <img src="images/logo-header.png" alt="logo Din Din">
+            </a>
+            <nav id="nav-header">
+                <a class="link-nav" href="./cursos.html">Cursos</a>
+                <a class="link-nav" href="./blog.html">Blog</a>
+                <a class="link-nav" href="./contato.html">Contato</a>
+            </nav>
+        </div>
 
-            <ul id="menu">
-                <li class="menu-item">
-                    <a class="menu-item-link" href="./cursos.html">CURSOS</a>
-                </li>
-                <li class="menu-item">
-                    <a class="menu-item-link" href="./blog.html">BLOG</a>
-                </li>
-                <li class="menu-item">
-                    <a class="menu-item-link" href="./contato.html">CONTATO</a>
-                </li>
-            </ul>
-        </nav>
     </header>
     <main>
         <div id="container">
