--- a/index.html
+++ b/index.html
@@ -12,150 +12,158 @@
 
 <body>
     <header id="container-header">
-        <nav id="nav-header">
-            <img src="images/logo-header.png" alt="logo-header">
+        <div class="wrapper">
+            <a id="logo-header" href="./index.html">
+                <img src="images/logo-header.png" alt="logo Din Din">
+            </a>
+            <nav id="nav-header">
+                <a class="link-nav" href="./cursos.html">Cursos</a>
+                <a class="link-nav" href="./blog.html">Blog</a>
+                <a class="link-nav" href="./contato.html">Contato</a>
+            </nav>
+        </div>
 
-            <ul id="menu">
-                <li class="menu-item">
-                    <a class="menu-item-link" href="./cursos.html">CURSOS</a>
-                </li>
-                <li class="menu-item">
-                    <a class="menu-item-link" href="./blog.html">BLOG</a>
-                </li>
-                <li class="menu-item">
-                    <a class="menu-item-link" href="./contato.html">CONTATO</a>
-                </li>
-            </ul>
-        </nav>
     </header>
     <main>
-        <section id="section-superior">
-            <div class="card-1">
-                <h1 id="titulo-superior">Educação <br>
-                    Financeira <br>
-                    é tudo de bom</h1>
-                <p id="titulo-superior1">Vem comigo que te mostro <br>
-                    por onde começar</p>
-                <a href="">quero saber mais</a>
-            </div>
-            <div class="card-2">
-                <img src="images/ilustra-banner.png" alt="banner">
-            </div>
-        </section>
-        <section id="section-central-1">
-            <div class="card-3">
-                <img src="images/ilustra-poupando.png" alt="poupando">
-                <h1 class="titulos-central-1">Investimento para iniciantes</h1>
-                <p class="paragrafos-central">Duis aute irure dolor in reprehenderit <br>
-                    in voluptate velit es se cillum dolore <br>
-                    eu fugiat nulla pariatur.
-                </p>
-                <a class="link-central" href="">começar agora</a>
-            </div>
-            <div class="card-4">
-                <img src="images/ilustra-investimento.png" alt="ilustra">
-                <h1 class="titulos-central-1">Poupando e Rendendo</h1>
-                <p class="paragrafos-central">Duis aute irure dolor in reprehenderit <br>
-                    in voluptate velit es se cillum dolore <br>
-                    eu fugiat nulla pariatur.
-                </p>
-                <a class="link-central" href="">começar agora</a>
-            </div>
-            <div class="card-5">
-                <img src="images/ilustra-independencia.png" alt="independencia">
-                <h1 class="titulos-central-1">Independência Financeira</h1>
-                <p class="paragrafos-central">Duis aute irure dolor in reprehenderit <br>
-                    in voluptate velit es se cillum dolore <br>
-                    eu fugiat nulla pariatur.
-                </p>
-                <a class="link-central" href="">começar agora</a>
+        <section id="section-banner">
+            <div class="wrapper">
+                <div class="banner-content">
+                    <h1 id="titulo-superior">Educação <br>
+                        Financeira <br>
+                        é tudo de bom</h1>
+                    <p id="subtitulo">Vem comigo que te mostro <br>
+                        por onde começar</p>
+                    <a href="./cursos">quero saber mais</a>
+                </div>
+                <div class="banner-image">
+                    <img src="images/ilustra-banner.png" alt="banner">
+                </div>
             </div>
         </section>
-        <h1 id="titulo-central-2">O QUE FALAM SOBRE NÓS</h1>
+        <section id="section-central">
+            <div class="wrapper">
+                <div class="card-central">
+                    <img src="images/ilustra-poupando.png" alt="poupando">
+                    <h1 class="titulos-central">Investimento para iniciantes</h1>
+                    <p class="paragrafos-central">Duis aute irure dolor in reprehenderit <br>
+                        in voluptate velit es se cillum dolore <br>
+                        eu fugiat nulla pariatur.
+                    </p>
+                    <a class="link-central" href="">começar agora</a>
+                </div>
+                <div class="card-central">
+                    <img src="images/ilustra-investimento.png" alt="ilustra">
+                    <h1 class="titulos-central">Poupando e Rendendo</h1>
+                    <p class="paragrafos-central">Duis aute irure dolor in reprehenderit <br>
+                        in voluptate velit es se cillum dolore <br>
+                        eu fugiat nulla pariatur.
+                    </p>
+                    <a class="link-central" href="">começar agora</a>
+                </div>
+                <div class="card-central">
+                    <img src="images/ilustra-independencia.png" alt="independencia">
+                    <h1 class="titulos-central">Independência Financeira</h1>
+                    <p class="paragrafos-central">Duis aute irure dolor in reprehenderit <br>
+                        in voluptate velit es se cillum dolore <br>
+                        eu fugiat nulla pariatur.
+                    </p>
+                    <a class="link-central" href="">começar agora</a>
+                </div>
+            </div>
+        </section>
         <section id="section-central-2">
-            <div class="card-6">
-                <img src="images/icon-wally.png" alt="wally" width="104px" height="104px">
-                <p>
-                    ”Sed ut perspiciatis unde omnis iste natus
-                    error sit voluptatem accusantium doloremque
-                    laudantium, totam rem aperiam.”
-                    <br>
-                    <br>
+            <div class="wrapper">
+                <h1 id="titulo-central-2">O QUE FALAM SOBRE NÓS</h1>
+                <div class="depoimentos">
+                    <div class="card-central-2">
+                        <img src="images/icon-wally.png" alt="wally" width="104px" height="104px">
+                        <p>
+                            ”Sed ut perspiciatis unde omnis iste natus
+                            error sit voluptatem accusantium doloremque
+                            laudantium, totam rem aperiam.”
+                            <br>
+                            <br>
 
-                    Wally, 25
-                </p>
-            </div>
-            <div class="card-6">
-                <img src="images/icon-whoopi.png" alt="jane" width="104px" height="104px">
-                <p>
-                    ”Sed ut perspiciatis unde omnis iste natus
-                    error sit voluptatem accusantium doloremque
-                    laudantium, totam rem aperiam.”
-                    <br>
-                    <br>
+                            Wally, 25
+                        </p>
+                    </div>
+                    <div class="card-central-2">
+                        <img src="images/icon-whoopi.png" alt="jane" width="104px" height="104px">
+                        <p>
+                            ”Sed ut perspiciatis unde omnis iste natus
+                            error sit voluptatem accusantium doloremque
+                            laudantium, totam rem aperiam.”
+                            <br>
+                            <br>
 
-                    jaden Smith, 23
-                </p>
-            </div>
-            <div class="card-6">
-                <img src="images/icon-jaden.png" alt="jane" width="104px" height="104px">
-                <p>
-                    ”Sed ut perspiciatis unde omnis iste natus
-                    error sit voluptatem accusantium doloremque
-                    laudantium, totam rem aperiam.”
-                    <br>
-                    <br>
+                            jaden Smith, 23
+                        </p>
+                    </div>
+                    <div class="card-central-2">
+                        <img src="images/icon-jaden.png" alt="jane" width="104px" height="104px">
+                        <p>
+                            ”Sed ut perspiciatis unde omnis iste natus
+                            error sit voluptatem accusantium doloremque
+                            laudantium, totam rem aperiam.”
+                            <br>
+                            <br>
 
-                    Whoopi Goldberg, 37
-                </p>
-            </div>
-            <div class="card-6">
-                <img src="images/icon-jane.png" alt="jane" width="104px" height="104px">
-                <p>
-                    ”Sed ut perspiciatis unde omnis iste natus
-                    error sit voluptatem accusantium doloremque
-                    laudantium, totam rem aperiam.”
-                    <br>
-                    <br>
+                            Whoopi Goldberg, 37
+                        </p>
+                    </div>
+                    <div class="card-central-2">
+                        <img src="images/icon-jane.png" alt="jane" width="104px" height="104px">
+                        <p>
+                            ”Sed ut perspiciatis unde omnis iste natus
+                            error sit voluptatem accusantium doloremque
+                            laudantium, totam rem aperiam.”
+                            <br>
+                            <br>
 
-                    Janes Joplin, 29
-                </p>
+                            Janes Joplin, 29
+                        </p>
+                    </div>
+                </div>
             </div>
-            </div>
+
         </section>
-        <h1 id="titulo-central-3">MAIS CONTEÚDO PARA VOCÊ</h1>
-        <section id="section-central-3">
-            <div class="card-7">
-                <img src="images/risoto.png" alt="risoto" width="319px" height="193px">
-                <h4 class="titulo-central-4">Itaque earum rerum</h4>
-                <p>
+        <section id="section-inferior">
+            <div class="wrapper">
+                <h1 id="titulo-inferior">MAIS CONTEÚDO PARA VOCÊ</h1>
+                <div class="list">
+                    <div class="card">
+                        <img src="images/risoto.png" alt="risoto" width="319px" height="193px">
+                        <h4>Itaque earum rerum</h4>
+                        <p>
 
-                    hic tenetur a sapiente delectus, ut aut <br>
-                    reiciendis voluptatibus maiores alias <br>
-                    consequatur aut perferendis doloribus <br>
-                    asperiores repellat.
-                </p>
-            </div>
-            <div class="card-7">
-                <img src="images/risoto.png" alt="risoto" width="319px" height="193px">
-                <h4 class="titulo-central-4">Itaque earum rerum</h4>
-                <p>
+                            hic tenetur a sapiente delectus, ut aut <br>
+                            reiciendis voluptatibus maiores alias <br>
+                            consequatur aut perferendis doloribus <br>
+                            asperiores repellat.
+                        </p>
+                    </div>
+                    <div class="card">
+                        <img src="images/risoto.png" alt="risoto" width="319px" height="193px">
+                        <h4>Itaque earum rerum</h4>
+                        <p>
 
-                    hic tenetur a sapiente delectus, ut aut <br>
-                    reiciendis voluptatibus maiores alias <br>
-                    consequatur aut perferendis doloribus <br>
-                    asperiores repellat.
-                </p>
-            </div>
-            <div class="card-7">
-                <img src="images/risoto.png" alt="risoto" width="319px" height="193px">
-                <h4 class="titulo-central-4">Itaque earum rerum</h4>
-                <p>
-                    hic tenetur a sapiente delectus, ut aut <br>
-                    reiciendis voluptatibus maiores alias <br>
-                    consequatur aut perferendis doloribus <br>
-                    asperiores repellat.
-                </p>
+                            hic tenetur a sapiente delectus, ut aut <br>
+                            reiciendis voluptatibus maiores alias <br>
+                            consequatur aut perferendis doloribus <br>
+                            asperiores repellat.
+                        </p>
+                    </div>
+                    <div class="card">
+                        <img src="images/risoto.png" alt="risoto" width="319px" height="193px">
+                        <h4>Itaque earum rerum</h4>
+                        <p>
+                            hic tenetur a sapiente delectus, ut aut <br>
+                            reiciendis voluptatibus maiores alias <br>
+                            consequatur aut perferendis doloribus <br>
+                            asperiores repellat.
+                        </p>
+                    </div>
+                </div>
             </div>
         </section>
         <div id="button">
@@ -164,8 +172,9 @@
     </main>
     <footer>
         <div id="container-footer">
-            <img id="logo-footer" src="images/logo-footer.png" alt="logo-header">
-
+            <a href="./index.html">
+                <img id="logo-footer" src="images/logo-footer.png" alt="logo-header">
+            </a>
             <nav id="nav-footer">
                 <ul class="menu-footer">
                     <li class="menu-footer-item-link">
